<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/bg_gradient"
    tools:context="com.a3solutions.voicerecogtest.RegisterActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/create_your_account"
            android:textColor="#fff"
            android:layout_gravity="center_horizontal" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/et_reg_username"
                android:layout_gravity="center_horizontal"
                android:hint="@string/username"
                android:textColor="#FFF"
                android:textColorHint="#999"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_name_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_reg_name"
                android:textColor="#FFF"
                android:textColorHint="#999"
                android:layout_gravity="center_horizontal"
                android:hint="@string/name"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:ems="10"
                android:textColor="#FFF"
                android:textColorHint="#999"
                android:id="@+id/et_reg_password"
                android:layout_gravity="center_horizontal"
                android:hint="@string/password"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password_confirm_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:ems="10"
                android:textColor="#FFF"
                android:textColorHint="#999"
                android:id="@+id/et_reg_confirmpassword"
                android:layout_gravity="center_horizontal"
                android:hint="@string/confirm_password"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:textColor="#FFF"
                android:textColorHint="#999"
                android:id="@+id/et_reg_email"
                android:layout_gravity="center_horizontal"
                android:hint="@string/email_id"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_mobile_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="phone"
                android:textColor="#FFF"
                android:textColorHint="#999"
                android:ems="10"
                android:id="@+id/et_reg_mobileno"
                android:layout_gravity="center_horizontal"
                android:hint="@string/mobile_number"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:id="@+id/bt_signup"
            android:background="@drawable/bg_gradient"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />

    </LinearLayout>

</ScrollView>
