<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ls="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context="com.a3solutions.voicerecogtest.NewResult">

    <RelativeLayout
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <com.satsuware.usefulviews.LabelledSpinner
            android:id="@+id/sp_from_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            ls:labelText="From Station"
            ls:widgetColor="#ffffff" />

        <com.satsuware.usefulviews.LabelledSpinner
            android:id="@+id/sp_to_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/sp_from_station"
            ls:labelText="To Station"
            ls:widgetColor="#ffffff" />

        <Button
            android:id="@+id/bt_confirm"
            style="?metaButtonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/ripple"
            android:text="@string/confirm_booking" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_alignStart="@+id/sp_to_station"
            android:layout_below="@+id/sp_to_station"
            android:layout_marginTop="17dp"
            android:text="@string/number_of_tickets"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_num_ticket"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:text=""
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:text="@string/date_of_journey"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_toEndOf="@+id/textView3"
            android:text=""
            android:textColor="@color/white" />

    </RelativeLayout>
</RelativeLayout>

